fix page header alignment for 2.3

--- a/ckanext/standard/theme/resources/less/theme.less
+++ b/ckanext/standard/theme/resources/less/theme.less
@@ -1016,6 +1016,10 @@ a.tag {
     z-index:-1;
     border-bottom:solid 1px @tab-border;
     
+    .row & {
+      left:-21px;
+    }
+    
     .no-nav & {
       left:-5000px;
     }
